--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <main>
-      <header>head</header>
+      <header>header</header>
       <nav>nav</nav>
       <section>
         <!-- form section -->
