--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1>Form</h1>
           <!-- <h3>class</h3>
         <h6>class</h6> -->
-          <p>This is our <b>form</b></p>
+          <p>This is <b>form</b></p>
           <form action="">
             <div>
               <label for="name">name</label>
