--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <main>
       <header>header</header>
-      <nav>nav</nav>
+      <nav>navbar</nav>
       <section>
         <!-- form section -->
         <section>
