--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
   <body>
     <main>
       <header>header</header>
-      <nav>nav</nav>
+      <nav>
+        <a href="./aboutus.html">about us</a>
+        <a href="./contact.html">contact us</a>
+        <a href="./dashboard/dashboard.html">dashboard</a>
+        <a href="https://www.google.com/" target="_blank"> google</a>
+      </nav>
       <section>
         <!-- form section -->
         <section>
@@ -114,6 +119,35 @@
             </tbody>
           </table>
         </section>
+      </section>
+      <br />
+      <br />
+      <!-- list -->
+      <section>
+        <h3>order</h3>
+        <ol>
+          <li>ram</li>
+          <li>hari</li>
+          <li>shyam</li>
+        </ol>
+        <br />
+        <br />
+        <h3>unorder</h3>
+        <ul>
+          <li>ram</li>
+          <li>hari</li>
+          <li>shyam</li>
+        </ul>
+      </section>
+      <br />
+      <br />
+      <!-- images -->
+      <section>
+        <img
+          src="https://buffer.com/cdn-cgi/image/w=1000,fit=contain,q=90,f=auto/library/content/images/size/w1200/2023/10/free-images.jpg"
+          alt=""
+        />
+        <img src="./images/glass.jpeg" width="500" alt="" />
       </section>
       <!-- <footer>footer</footer> -->
     </main>
