--- a/index.html
+++ b/index.html
@@ -283,6 +283,26 @@
 
       <br />
 
+      <div class="grid">
+        <div style="background-color: burlywood">1</div>
+        <div style="background-color: rgb(26, 148, 109)">2</div>
+        <div style="background-color: rgb(77, 204, 115)">3</div>
+        <div style="background-color: rgb(143, 109, 65)">4</div>
+        <div style="background-color: rgb(219, 135, 222)">5</div>
+        <div
+          style="
+            background-color: rgb(151, 222, 135);
+            grid-column: 3/4;
+            grid-row: 2/4;
+          "
+        >
+          6
+        </div>
+        <div style="background-color: rgb(222, 135, 183); grid-column: 1/3">
+          7
+        </div>
+      </div>
+
       <!-- <footer>footer</footer> -->
     </main>
   </body>
