--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <a href="./contact.html">contact us</a>
         <a href="./dashboard/dashboard.html">dashboard</a>
         <a href="https://www.google.com/" target="_blank"> google</a>
+        <div class="drop-down">
+          <button>menu</button>
+          <div class="drop-content">
+            <div>Profile</div>
+            <div>logout</div>
+          </div>
+        </div>
       </nav>
       <!-- center any div -->
       <!-- <div class="center-p">
@@ -174,24 +181,36 @@
         <!-- images -->
         <h1>Images</h1>
         <br />
-        <section class="images">
-          <img
-            src="https://buffer.com/cdn-cgi/image/w=1000,fit=contain,q=90,f=auto/library/content/images/size/w1200/2023/10/free-images.jpg"
-            alt=""
-            style="width: 100%"
-          />
-          <img src="./images/glass.jpeg" style="width: 100%" alt="" />
-          <img src="./images/glass.jpeg" style="width: 100%" alt="" />
-          <img src="./images/glass.jpeg" style="width: 100%" alt="" />
-          <img src="./images/glass.jpeg" style="width: 100%" alt="" />
-          <img
-            src="./images/glass.jpeg"
-            style="width: 100%; height: 100%; grid-column: 3/4; grid-row: 2/4"
-            alt="sadsd"
-          />
-          <img src="./images/glass.jpeg" style="width: 100%" alt="" />
-          <img src="./images/glass.jpeg" style="width: 100%" alt="" />
-        </section>
+        <div style="display: flex">
+          <div
+            style="
+              min-width: 200px;
+              position: sticky;
+              height: fit-content;
+              top: 100px;
+            "
+          >
+            <h2>filter</h2>
+          </div>
+          <section class="images">
+            <img
+              src="https://buffer.com/cdn-cgi/image/w=1000,fit=contain,q=90,f=auto/library/content/images/size/w1200/2023/10/free-images.jpg"
+              alt=""
+              style="width: 100%"
+            />
+            <img src="./images/glass.jpeg" style="width: 100%" alt="" />
+            <img src="./images/glass.jpeg" style="width: 100%" alt="" />
+            <img src="./images/glass.jpeg" style="width: 100%" alt="" />
+            <img src="./images/glass.jpeg" style="width: 100%" alt="" />
+            <img
+              src="./images/glass.jpeg"
+              style="width: 100%; height: 100%; grid-column: 3/4; grid-row: 2/4"
+              alt="sadsd"
+            />
+            <img src="./images/glass.jpeg" style="width: 100%" alt="" />
+            <img src="./images/glass.jpeg" style="width: 100%" alt="" />
+          </section>
+        </div>
         <br />
         <!-- product card -->
         <h1>Products</h1>
@@ -302,6 +321,20 @@
           7
         </div>
       </div>
+      <!-- Position -->
+      <section>
+        <!-- <div class="dad">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus,
+            dolore repellat! Ad sit odio atque minima eos nulla, veritatis
+            perspiciatis harum accusantium impedit eum iste fuga voluptate ullam
+            nostrum fugiat!
+          </p>
+          <div class="son"></div>
+        </div> -->
+
+        <div class="fixed">UP</div>
+      </section>
 
       <!-- <footer>footer</footer> -->
     </main>
