--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
     <main>
       <header>header</header>
       <nav>
-        <a href="./aboutus.html">about us</a>
-        <a href="./contact.html">contact us</a>
-        <a href="./dashboard/dashboard.html">dashboard</a>
-        <a href="https://www.google.com/" target="_blank"> google</a>
+        <div class="big-nav">
+          <a href="./aboutus.html">about us</a>
+          <a href="./contact.html">contact us</a>
+          <a href="./dashboard/dashboard.html">dashboard</a>
+          <a href="https://www.google.com/" target="_blank"> google</a>
+        </div>
         <div class="drop-down">
           <button>menu</button>
           <div class="drop-content">
-            <div>Profile</div>
-            <div>logout</div>
+            <a href="./aboutus.html">about us</a>
+            <a href="./contact.html">contact us</a>
+            <a href="./dashboard/dashboard.html">dashboard</a>
+            <a href="https://www.google.com/" target="_blank"> google</a>
           </div>
         </div>
       </nav>
@@ -54,7 +58,7 @@
         deserunt inventore totam.
       </div> -->
 
-      <section style="padding: 0 30px">
+      <section class="container">
         <!-- form section -->
         <br />
         <section class="form-wrapper">
@@ -113,51 +117,53 @@
         <!-- table -->
         <section>
           <h1>table</h1>
-          <table style="width: 100%">
-            <thead>
-              <tr>
-                <th>sn</th>
-                <th>name</th>
-                <th>email</th>
-                <th>dob</th>
-                <th>meet date</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>nabin</td>
-                <td>nabin@nabin.com</td>
-                <td>12/12/2002</td>
-                <td>sun 11 2023 11:00 AM</td>
-              </tr>
+          <div style="overflow: auto">
+            <table style="width: 100%">
+              <thead>
+                <tr>
+                  <th>sn</th>
+                  <th>name</th>
+                  <th>email</th>
+                  <th>dob</th>
+                  <th>meet date</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>nabin</td>
+                  <td>nabin@nabin.com</td>
+                  <td>12/12/2002</td>
+                  <td>sun 11 2023 11:00 AM</td>
+                </tr>
 
-              <tr>
-                <td>1</td>
-                <td>nabin</td>
-                <td>nabin@nabin.com</td>
-                <td>12/12/2002</td>
-                <td>sun 11 2023 11:00 AM</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>nabin</td>
-                <td>nabin@nabin.com</td>
-                <td>12/12/2002</td>
-                <td rowspan="2">sun 11 2023 11:00 AM</td>
-              </tr>
-              <tr>
-                <td>1</td>
-                <td>nabin</td>
-                <td>nabin@nabin.com</td>
-                <td>12/12/2002</td>
-              </tr>
-              <tr>
-                <td colspan="4">total</td>
-                <td>Rs 10,000</td>
-              </tr>
-            </tbody>
-          </table>
+                <tr>
+                  <td>1</td>
+                  <td>nabin</td>
+                  <td>nabin@nabin.com</td>
+                  <td>12/12/2002</td>
+                  <td>sun 11 2023 11:00 AM</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>nabin</td>
+                  <td>nabin@nabin.com</td>
+                  <td>12/12/2002</td>
+                  <td rowspan="2">sun 11 2023 11:00 AM</td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>nabin</td>
+                  <td>nabin@nabin.com</td>
+                  <td>12/12/2002</td>
+                </tr>
+                <tr>
+                  <td colspan="4">total</td>
+                  <td>Rs 10,000</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </section>
         <br />
         <br />
@@ -181,15 +187,8 @@
         <!-- images -->
         <h1>Images</h1>
         <br />
-        <div style="display: flex">
-          <div
-            style="
-              min-width: 200px;
-              position: sticky;
-              height: fit-content;
-              top: 100px;
-            "
-          >
+        <div class="product">
+          <div class="filter">
             <h2>filter</h2>
           </div>
           <section class="images">
@@ -202,11 +201,11 @@
             <img src="./images/glass.jpeg" style="width: 100%" alt="" />
             <img src="./images/glass.jpeg" style="width: 100%" alt="" />
             <img src="./images/glass.jpeg" style="width: 100%" alt="" />
-            <img
+            <!-- <img
               src="./images/glass.jpeg"
               style="width: 100%; height: 100%; grid-column: 3/4; grid-row: 2/4"
               alt="sadsd"
-            />
+            /> -->
             <img src="./images/glass.jpeg" style="width: 100%" alt="" />
             <img src="./images/glass.jpeg" style="width: 100%" alt="" />
           </section>
